--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <a href="#contact" class="btn">Get in Touch</a>
       </div>
       <div class="hero-img">
-        <!-- Replace "WhatsApp Image 2025-09-06 at 22.04.09_5d44674f.jpg" with your image file later -->
-        <img src="your-photo.jpg" alt="Ayush Kumar">
+        <img src="WhatsApp Image 2025-09-06 at 22.04.09_5d44674f.jpg" alt="Ayush Kumar">
       </div>
     </div>
   </section>
